# libvirt_nodemanager

./: Cargo.toml  Dockerfile  README.md  justfile  rotate_oldest_host.sh
docker/: entrypoint.sh
kubernetes/: certificate.yaml  deployment.yaml  kustomization.yaml  svcacct.yaml  svcacctsecret.yaml
src/: main.rs
