[package]
name = "libvirt_nodemanager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.87.2", features = ["derive", "rustls-tls", "runtime"] }
kube-runtime = { version = "0.87.2"}
k8s-openapi = {  version = "0.20.0", features= ["v1_26"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
serde_json = "1.0.111"
lazy_static = "1.4.0"
thiserror = "1.0.56"
tokio = {  version = "1.35.1" , features=["rt-multi-thread","macros", "time"]}
prometheus = "0.13.3"
tracing = {version = "0.1.40"}
tracing-subscriber = {version = "0.3.17", features = ["fmt","env-filter"]}
tracing-log = "0.2.0"
futures = "0.3.30"
